fix align issue

--- a/src/components/relatedQuestion/relatedQuestion.module.less
+++ b/src/components/relatedQuestion/relatedQuestion.module.less
@@ -66,5 +66,10 @@ h2.title {
 }
 
 .link {
-  align-items: flex-start;
+  display: inline-block;
+
+  svg {
+    vertical-align: middle;
+    margin-right: 8px;
+  }
 }
